Many bugfixes and improvements. Bugfix activation now properly reports whether the connection was created new or resumed. Text in channel is linkified if it looks like a URL. config.php has debug setting to control whether ircweb2recv.php returns raw IRC messages in its result; not normally needed by client. Set background process to 1M memory limit.  Seems to only require ~200-500k while running.  This should allow many concurrent sessions by cutting down overhead. CSS improved readability in channel window by using a 50% black background overlay over the gradient.

--- a/ircweb2.css
+++ b/ircweb2.css
@@ -20,8 +20,8 @@ BODY {
 }
 
 #ircTabs {
-    width: 680px;
-    height: 240px;
+    width: 740px;
+    height: 360px;
 }
 
 #userEntrySection {
@@ -49,11 +49,18 @@ BODY {
     overflow: hidden;
 }
 
+.ircChannel {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 3px;
+    margin: -3px;
+}
+
 .ircChannel .line {
     clear: both;
     padding: 0 0 0 50px;
     text-indent: -50px;
     word-wrap: break-word;
+    margin-bottom: 0.1em;
 }
 
 .ircChannel .timestamp {
